// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuVertical body renders without regressions 1`] = `
<div>
  <div
    css={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "paddingBottom": "0.809rem",
          "paddingTop": "1.618rem",
        },
        Object {
          "display": "none",
        },
      ]
    }
  >
    <a
      css={
        Object {
          ":hover": Object {},
          "background": "none",
          "fontSize": "1rem",
          "fontWeight": "medium",
          "textDecoration": "none",
        }
      }
      href="/path-1"
    >
      title-1
    </a>
    <span
      css={
        Object {
          "color": "white",
          "cursor": "default",
          "height": "0.5rem",
        }
      }
    >
       
    </span>
    <a
      css={
        Object {
          ":hover": Object {},
          "background": "none",
          "fontSize": "1rem",
          "fontWeight": "medium",
          "textDecoration": "none",
        }
      }
      href="/path-2"
    >
      title-2
    </a>
  </div>
</div>
`;

exports[`MenuVertical head renders without regressions 1`] = `
<div>
  <button
    css={
      Array [
        Object {
          ":focus": Object {
            "outline": 0,
          },
          "backgroundColor": "transparent",
          "border": "1px solid #2C8127",
          "color": "#2C8127",
          "cursor": "pointer",
          "padding": "0.5rem",
        },
        null,
      ]
    }
    onClick={[Function]}
  >
    Menu
  </button>
</div>
`;

exports[`MenuVertical opened body renders without regressions 1`] = `
<div>
  <div
    css={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "paddingBottom": "0.809rem",
          "paddingTop": "1.618rem",
        },
        null,
      ]
    }
  >
    <a
      css={
        Object {
          ":hover": Object {},
          "background": "none",
          "fontSize": "1rem",
          "fontWeight": "medium",
          "textDecoration": "none",
        }
      }
      href="/path-1"
    >
      title-1
    </a>
    <span
      css={
        Object {
          "color": "white",
          "cursor": "default",
          "height": "0.5rem",
        }
      }
    >
       
    </span>
    <a
      css={
        Object {
          ":hover": Object {},
          "background": "none",
          "fontSize": "1rem",
          "fontWeight": "medium",
          "textDecoration": "none",
        }
      }
      href="/path-2"
    >
      title-2
    </a>
  </div>
</div>
`;

exports[`MenuVertical opened head renders without regressions 1`] = `
<div>
  <button
    css={
      Array [
        Object {
          ":focus": Object {
            "outline": 0,
          },
          "backgroundColor": "transparent",
          "border": "1px solid #2C8127",
          "color": "#2C8127",
          "cursor": "pointer",
          "padding": "0.5rem",
        },
        Object {
          "background": "repeating-linear-gradient(
      45deg,
      #3CB534,
      #3CB534 10px,
      #2C8127 10px,
      #2C8127 20px
    )",
          "backgroundColor": "#2C8127",
          "border": "1px solid white",
          "color": "white",
          "opacity": 0.9,
        },
      ]
    }
    onClick={[Function]}
  >
    Menu
  </button>
</div>
`;
